# SimpleNet

./: .gitignore  CMakeLists.txt  README.md
src/: Matrix.cpp  Matrix.cu  Matrix.h  Tensor.cpp  Tensor.h  activation_functions.cpp  autogradient.cpp  linear.cpp  relu.cpp  testingDriver.cpp
